--- a/frisk.html
+++ b/frisk.html
@@ -3,6 +3,6 @@
     <title>Frisk Spin</title>
   </head>
   <body>
-    <iframe id="ytplayer" type="text/html" src="https://www.youtube.com/embed/aDUQawbSTFM?autoplay=1&controls=0&disablekb=1&loop=1&color=white" frameborder="0" allowfullscreen />
+    <iframe id="ytplayer" type="text/html" width=99% height=99% src="https://www.youtube.com/embed/aDUQawbSTFM?autoplay=1&controls=0&disablekb=1&loop=1&color=white" frameborder="0" allowfullscreen />
   </body>
 </html>
