--- a/frisk.html
+++ b/frisk.html
@@ -1,8 +1,13 @@
 <html>
   <head>
     <title>Frisk Spin</title>
+    <style>
+      html {
+        background-color: black;
+      }
+    </style>
   </head>
   <body>
-    <iframe id="ytplayer" type="text/html" width=99% height=99% src="https://www.youtube.com/embed/aDUQawbSTFM?autoplay=1&controls=0&disablekb=1&loop=1&color=white" frameborder="0" allowfullscreen />
+    <iframe id="ytplayer" type="text/html" width=100% height=100% src="https://www.youtube.com/embed/aDUQawbSTFM?autoplay=1&controls=0&disablekb=1&loop=1&color=white" frameborder="0" allowfullscreen />
   </body>
 </html>
