--- a/frisk.html
+++ b/frisk.html
@@ -4,7 +4,8 @@
     <style>
       html {
         background-color: black;
-        margin: 0;
+        
+    margin: 0px;
       }
     </style>
   </head>
