--- a/frisk.html
+++ b/frisk.html
@@ -2,7 +2,7 @@
   <head>
     <title>Frisk Spin</title>
     <style>
-      html {
+      body {
         background-color: black;
         
     margin: 0px;
